# echoes

./: .gitignore  Makefile  README.md  build.sh  clean.sh  compile.sh  echoes.cabal  lint.sh
samples/: factorial.lam  omega.lam
src/: Ast.hs  HIR.hs  LambdaRuntime.cc  Main.hs  Parse.hs
src/Codegen/: Codegen.hs  Common.hs  RegAlloc.hs  X86.hs
src/HIR/: ConstantPropagation.hs  DeadAssignmentElimination.hs  HIR.hs  Optimizations.hs  RemoveBadPhis.hs
src/LIR/: LIR.hs
src/Runtime/: runtime-x86.S  runtime.c  runtime.h
src/Source/: Ast.hs  Parse.hs
src/Utils/: Common.hs  Graph.hs
