name:                echoes
version:             0.1.0.0
synopsis:            Lambda Calculus Compiler

description:         Toy compiler for a programming language that is 
                     essentially lambda calculus + integers + booleans.

license:             GPL-3
license-file:        LICENSE
author:              Sanjoy Das
maintainer:          sanjoy@playingwithpointers.com

copyright:           Sanjoy Das 2013
category:            Toy

build-type:          Simple
cabal-version:       >=1.8

executable echoes
  main-is: Main.hs
  build-depends:       base==4.9.*, hoopl==3.10.*, containers==0.5.*, mtl==2.2.*,
                       parsec==3.1.*, cmdargs==0.10.*

  hs-source-dirs:      src
